Fix misaligned and inconsitent rolltemplates

--- a/Old School Essentials - AAC/OSE-AAC.css
+++ b/Old School Essentials - AAC/OSE-AAC.css
@@ -310,22 +310,22 @@ div.sheet-info-grid span {
   padding: 4px;
 }
 
-.sheet-rolltemplate-greater span.sheet-rollresult,
-.sheet-rolltemplate-less span.sheet-rollresult,
-.sheet-rolltemplate-skill span.sheet-rollresult {
-  border-top: 1px solid black;
-}
-
+.sheet-rolltemplate-simple .sheet-fullcrit,
+.sheet-rolltemplate-simple .inlinerollresult.fullcrit,
 .sheet-rolltemplate-greater span.sheet-rollfail,
 .sheet-rolltemplate-less span.sheet-rollfail,
 .sheet-rolltemplate-skill span.sheet-rollfail {
   color: #990000;
+  font-weight: bold;
 }
 
+.sheet-rolltemplate-simple .sheet-fullfail,
+.sheet-rolltemplate-simple .inlinerollresult.fullfail,
 .sheet-rolltemplate-greater span.sheet-rollsuccess,
 .sheet-rolltemplate-less span.sheet-rollsuccess,
 .sheet-rolltemplate-skill span.sheet-rollsuccess {
   color: #009900;
+  font-weight: bold;
 }
 
 .sheet-rolltemplate-simple h3,
@@ -401,22 +401,6 @@ div.sheet-info-grid span {
   box-sizing: border-box;
   line-height: inherit;
   font-size: 1.6rem;
-  text-align: left;
-}
-
-.sheet-rolltemplate-simple .sheet-fullcrit,
-.sheet-rolltemplate-simple .sheet-fullfail {
-  font-weight: bold;
-}
-
-.sheet-rolltemplate-simple .sheet-fullcrit,
-.sheet-rolltemplate-simple .inlinerollresult.fullcrit {
-  color: #3fb315;
-}
-
-.sheet-rolltemplate-simple .sheet-fullfail,
-.sheet-rolltemplate-simple .inlinerollresult.fullfail {
-  color: #b31515;
 }
 
 .sheet-rolltemplate-simple .sheet-template-result-only .inlinerollresult,
@@ -457,6 +441,10 @@ div.sheet-info-grid span {
   border-left: none;
   text-align: left;
   padding-left: 3px;
+}
+
+.sheet-rolltemplate-simple .sheet-template-row span.sheet-template-result span {
+  text-align: left;
 }
 
 .sheet-rolltemplate-simple .sheet-template-description {
